--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ before_script:
   - psql -c "CREATE DATABASE test_db;" -U postgres
   - psql -c "CREATE USER test_user WITH PASSWORD 'test';" -U postgres
   - psql -U postgres test_db -c 'CREATE EXTENSION "uuid-ossp";'
-  - npm run migrate
-  - npm run seed
+  # - npm run migrate
+  # - npm run seed
 
 script:
   - echo "Integration test starts....."
-  - npm run test
+  # - npm run test
 
 after_script:
-- npm install coveralls && npm run coverage
+# - npm install coveralls && npm run coverage
